# Test

Chat/: AddFriendContainer.qml  CMakeLists.txt  ChatWindow.qml  CreateGroupContainer.qml  CustomComboBox.qml  CustomMenu.qml  CustomPopup.qml  CustomProgressBar.qml  CustomSearchBar.qml  FileMessageItem.qml  Global.qml  Login.qml  Main.qml  MainWindow.qml  MessageContainer.qml  MessageItem.qml  MessageListView.qml  MyFriendContainer.qml  MyFriendListView.qml  NAFeatureBar.qml  NATitleBar.qml  NotificationContainer.qml  PictureMessageItem.qml  Register.qml  SearchResult.qml  TextMessageItem.qml  UserInfoContainer.qml  WorkerScript.js  main.cpp  res.qrc
Chat/FramelessWindow/: QuickFramelessWindow.cpp  QuickFramelessWindow.h
Chat/FramelessWindow/private/: QuickFramelessWindowPrivate.cpp  QuickFramelessWindowPrivate.h
Chat/include/: Captcha.h  SaveChatHistory.h  clientcontainer.h  imageprovider.h  imageprovidercustomround.h  imageproviderfromlocal.h  miniomanager.h
Chat/src/: Captcha.cpp  SaveChatHistory.cpp  clientcontainer.cpp  imageprovider.cpp  imageprovidercustomround.cpp  imageproviderfromlocal.cpp  miniomanager.cpp
Server/: CMakeLists.txt  clientcontainer.cpp  clientcontainer.h  clientwork.cpp  clientwork.h  globalproperties.cpp  globalproperties.h  main.cpp  miniomanager.cpp  miniomanager.h  userdatabasemanager.cpp  userdatabasemanager.h
